--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
 
         <div class="hero-image">
-          <img src="/img/Foto-profil-hero.png" alt="Novandro Roma   nda" />
+          <img src="img/Foto-profil-hero.png" alt="Novandro Romanda" />
         </div>
       </section>
 
