feat: project desain

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <i data-feather="instagram"></i>
             </a>
             <a
-              href="https://api.whatsapp.com/send?phone=6282269327965&text=Halo%20Bro%20Novan"
+              href="https://api.whatsapp.com/send?phone=6282269327965"
               target="_blank"
             >
               <i data-feather="message-circle"></i>
@@ -96,13 +96,46 @@
               <img src="img/project_2.png" alt="Project 2" />
               <p>Landing Page Merchandise</p>
             </div>
-            <div class="project-card">
-              <img src="img/project_3.png" alt="Project 3" />
-              <p>Android Book List App</p>
+          </div>
+        </div>
+      </section>
+
+      
+      <section id="poster-project">
+        <div class="poster-container">
+          <h1>Design</h1>
+          <div class="poster-grid">
+            <div class="poster-card">
+              <img src="Project/desain_comdev_PKSE.png" alt="Poster 1" />
+              <p>Poster 1</p>
             </div>
-            <div class="project-card">
-              <img src="img/project_4.png" alt="Project 4" />
-              <p>Dynamic Form Reporting</p>
+            <div class="poster-card">
+              <img src="Project/desain_hargizi_PKSE.png" alt="Poster 2" />
+              <p>Poster 2</p>
+            </div>
+            <div class="poster-card">
+              <img src="Project/desain_vacation_PKSE.png" alt="Poster 3" />
+              <p>Poster 3</p>
+            </div>
+            <div class="poster-card">
+              <img src="Project/desain_poster_bazar_PSMI.png" alt="Poster 4" />
+              <p>Poster 4</p>
+            </div>
+            <div class="poster-card">
+              <img src="Project/desain_pungut_sampah_PKSE.png" alt="Poster 5" />
+              <p>Poster 5</p>
+            </div>
+            <div class="poster-card">
+              <img src="Project/desain_pungut_sampah2_PKSE.png" alt="Poster 6" />
+              <p>Poster 6</p>
+            </div>
+            <div class="poster-card">
+              <img src="Project/desain_roadhow_PKSE.png" alt="Poster 7" />
+              <p>Poster 7</p>
+            </div>
+            <div class="poster-card">
+              <img src="Project/desain_pelatihan_midset_PKSE.png" alt="Poster 8" />
+              <p>Poster 8</p>
             </div>
           </div>
         </div>
@@ -189,7 +222,7 @@
             ><i data-feather="instagram"></i
           ></a>
           <a
-            href="https://api.whatsapp.com/send?phone=6282269327965&text=Halo%20Bro%20Novan"
+            href="https://api.whatsapp.com/send?phone=6282269327965"
             target="_blank"
             ><i data-feather="message-circle"></i
           ></a>
