fix: layout content

--- a/index.html
+++ b/index.html
@@ -101,45 +101,45 @@
       </section>
 
       
-      <section id="poster-project">
-        <div class="poster-container">
-          <h1>Design</h1>
-          <div class="poster-grid">
-            <div class="poster-card">
-              <img src="Project/desain_comdev_PKSE.png" alt="Poster 1" />
-              <p>Poster 1</p>
-            </div>
-            <div class="poster-card">
-              <img src="Project/desain_hargizi_PKSE.png" alt="Poster 2" />
-              <p>Poster 2</p>
-            </div>
-            <div class="poster-card">
-              <img src="Project/desain_vacation_PKSE.png" alt="Poster 3" />
-              <p>Poster 3</p>
-            </div>
-            <div class="poster-card">
-              <img src="Project/desain_poster_bazar_PSMI.png" alt="Poster 4" />
-              <p>Poster 4</p>
-            </div>
-            <div class="poster-card">
-              <img src="Project/desain_pungut_sampah_PKSE.png" alt="Poster 5" />
-              <p>Poster 5</p>
-            </div>
-            <div class="poster-card">
-              <img src="Project/desain_pungut_sampah2_PKSE.png" alt="Poster 6" />
-              <p>Poster 6</p>
-            </div>
-            <div class="poster-card">
-              <img src="Project/desain_roadhow_PKSE.png" alt="Poster 7" />
-              <p>Poster 7</p>
-            </div>
-            <div class="poster-card">
-              <img src="Project/desain_pelatihan_midset_PKSE.png" alt="Poster 8" />
-              <p>Poster 8</p>
+        <section id="poster-project">
+          <div class="poster-container">
+            <h1>Design</h1>
+            <div class="poster-grid">
+              <div class="poster-card">
+                <img src="Project/desain_comdev_PKSE.png" alt="Poster 1" />
+                <p>Seminar Comdev PKSE</p>
+              </div>
+              <div class="poster-card">
+                <img src="Project/desain_hargizi_PKSE.png" alt="Poster 2" />
+                <p>Poster Hargizi PKSE</p>
+              </div>
+              <div class="poster-card">
+                <img src="Project/desain_vacation_PKSE.png" alt="Poster 3" />
+                <p>Poster Vacation PKSE</p>
+              </div>
+              <div class="poster-card">
+                <img src="Project/desain_poster_bazar_PSMI.png" alt="Poster 4" />
+                <p>Poster Bazar PSMI</p>
+              </div>
+              <div class="poster-card">
+                <img src="Project/desain_pungut_sampah_PKSE.png" alt="Poster 5" />
+                <p>Poster Pungut Sampah PKSE</p>
+              </div>
+              <div class="poster-card">
+                <img src="Project/desain_pungut_sampah2_PKSE.png" alt="Poster 6" />
+                <p>Poster Pungut Sampah 2 PKSE</p>
+              </div>
+              <div class="poster-card">
+                <img src="Project/desain_roadhow_PKSE.png" alt="Poster 7" />
+                <p>Poster Roadshow PKSE</p>
+              </div>
+              <div class="poster-card">
+                <img src="Project/desain_pelatihan_midset_PKSE.png" alt="Poster 8" />
+                <p>Poster Pelatihan Midset PKSE</p>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
 
       <section id="more-project" class="reveal">
         <div class="more-project">
